--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+	"arrowParens": "avoid",
+	"semi": true,
+	"singleQuote": true,
+	"trailingComma": "es5",
+	"printWidth": 80,
+	"tabWidth": 2,
+	"endOfLine": "lf"
 }
