--- a/package.json
+++ b/package.json
@@ -1,40 +1,48 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "gatsby": "^5.14.6",
-    "gatsby-plugin-image": "^3.14.0",
-    "gatsby-plugin-manifest": "^5.14.0",
-    "gatsby-plugin-sharp": "^5.14.0",
-    "gatsby-source-filesystem": "^5.14.0",
-    "gatsby-transformer-sharp": "^5.14.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.8.8"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+	"name": "gatsby-starter-default",
+	"private": true,
+	"description": "A simple starter to get up and developing quickly with Gatsby",
+	"version": "0.1.0",
+	"author": "Kyle Mathews <mathews.kyle@gmail.com>",
+	"dependencies": {
+		"@tailwindcss/postcss": "^4.1.12",
+		"gatsby": "^5.14.6",
+		"gatsby-plugin-image": "^3.14.0",
+		"gatsby-plugin-manifest": "^5.14.0",
+		"gatsby-plugin-postcss": "^6.14.0",
+		"gatsby-plugin-sharp": "^5.14.0",
+		"gatsby-source-filesystem": "^5.14.0",
+		"gatsby-transformer-sharp": "^5.14.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.6",
+		"prettier": "^2.8.8",
+		"tailwindcss": "^4.1.12"
+	},
+	"keywords": [
+		"gatsby"
+	],
+	"license": "0BSD",
+	"scripts": {
+		"build": "gatsby build",
+		"develop": "gatsby develop",
+		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"start": "gatsby develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/gatsbyjs/gatsby-starter-default.git"
+	},
+	"bugs": {
+		"url": "https://github.com/gatsbyjs/gatsby/issues"
+	},
+	"main": "gatsby-browser.js",
+	"homepage": "https://github.com/gatsbyjs/gatsby-starter-default#readme"
 }
